# agents-workflow-cli

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  bitbucket-pipelines.yml  pyproject.toml
docs/: JIRA_TICKET_TEMPLATE.md  codeartifact.md  init-command.md  input-command.md  pull-command.md  push-command.md  review-command.md  run-command.md  sse-events.md  status-command.md  temporal-execution.md  temporal-run-test-playbook.md  validate-command.md
docs/plans/: 2026-02-25-workflow-run-command-design.md  2026-02-25-workflow-run-implementation.md
docs_agent/: 01-wdf-syntax-reference.md  02-node-types-reference.md  03-variable-references.md  04-example-workflows.md  05-best-practices-and-generation-rules.md  06-deployment-and-cli-commands.md  07-domain-to-wdf-mapping.md  README.md
document-parsing/: README.md  pyproject.toml
document-parsing/src/document_parsing/: __init__.py  config.py  docling_adapter.py  factory.py  hybrid_chunker.py  markitdown_adapter.py  port.py  routing_adapter.py  unstructured_adapter.py  utils.py
document-parsing/tests/: test_docling_adapter.py  test_element_mapper.py  test_factory.py  test_hybrid_chunker.py  test_markitdown_adapter.py  test_port_contract.py  test_unstructured_adapter.py  test_utils.py
scripts/release/: validate_release.py
shared-models/: README.md  pyproject.toml
shared-models/examples/: agent-review.workflow.yaml  all-node-types.workflow.yaml  invoice-processing.workflow.yaml  linear-pipeline.workflow.yaml  rag-workflow.workflow.yaml  retrieval-pipeline.workflow.yaml
shared-models/src/workflow_models/: __init__.py  enums.py
shared-models/src/workflow_models/schemas/: __init__.py  edges.py  execution.py  metadata.py  nodes.py  visuals.py  workflows.py
shared-models/src/workflow_models/wdf/: __init__.py  edges.py  nodes.py  validation.py  variable_ref.py  workflow.py
shared-models/tests/: test_enums.py  test_no_sqlalchemy_deps.py  test_schemas.py  test_wdf_examples.py  test_wdf_nodes.py  test_wdf_validation.py  test_wdf_variable_ref.py  test_wdf_workflow.py
src/cli/: __init__.py  __main__.py  client.py  config.py  console.py  contract.py  exceptions.py  interactive.py  last_run.py  lockfile.py  main.py  registry.py  sse.py  wdf_yaml.py
src/cli/commands/: __init__.py  delete.py  init.py  input.py  list.py  pull.py  push.py  registry.py  review.py  run.py  status.py  validate.py
src/cli/templates/: __init__.py  batch-processing.workflow.yaml  blank.workflow.yaml  document-analysis.workflow.yaml  form-with-review.workflow.yaml  rag-qa.workflow.yaml  simple-form.workflow.yaml  text-to-agent.workflow.yaml
src/cli/validation/: __init__.py  runner.py
tests/: conftest.py  test_cli_commands.py  test_client.py  test_client_response_models.py  test_config.py  test_contract.py  test_delete_command.py  test_enum_alignment.py  test_exceptions.py  test_init_command.py  test_input_command.py  test_integration_dependency_resolution.py  test_interactive.py  test_last_run.py  test_list_command.py  test_lockfile.py  test_pull_command.py  test_push_command.py  test_registry.py  test_registry_commands.py  test_release_validation.py  test_review_command.py  test_run_command.py  test_run_streaming_autoinput.py  test_shared_models_integration.py  test_sse.py  test_status_command.py  test_temporal_live.py  test_temporal_unit.py  test_validate_command.py  test_wdf_yaml_roundtrip.py
