[project]
name = "agents-document-parsing"
version = "0.3.2"
description = "Shared document parsing port, adapters (Docling Serve / Unstructured), and DocTags-aware HybridChunker for the Agents Platform"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "requests>=2.28",
    "pypdf>=5.0.0",
    # docling-core powers HybridChunker (DocTags -> hierarchy-aware chunks).
    # TODO(RAG-XXXX): pin the EXACT version aligned with the deployed
    # docling-serve instance once the infra owner confirms it. The DocTags
    # string format must round-trip between docling-serve's output and
    # docling-core's DoclingDocument.load_from_doctags() — a version skew
    # here breaks chunking silently. Both the backend and kb-ingest-pipeline
    # images must resolve the same version.
    "docling-core>=2.20,<3.0",
    # MarkItDown parses spreadsheets (.xlsx/.xls/.csv) locally via
    # pandas/openpyxl — far faster and more reliable than routing tabular
    # data through Docling's VLM pipeline (which fail-emptied them on prod
    # after a 30-min timeout each). [xls] extra pulls xlrd for legacy .xls.
    "markitdown[xls,xlsx]>=0.0.1a2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/document_parsing"]

[tool.hatch.build.targets.sdist]
include = ["src/document_parsing"]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "pytest>=8.0.0",
    "pre-commit>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["document_parsing"]
