[project]
name = "agents-workflow-models"
version = "0.1.4"
description = "Shared Pydantic schemas and enums for Agents Platform workflows"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workflow_models"]

[tool.hatch.build.targets.sdist]
include = ["src/workflow_models"]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
    "pytest>=8.0.0",
    "pre-commit>=4.0.0",
    "pyyaml>=6.0",  # For testing YAML example files (not a runtime dependency)
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "UP042",  # keep `str, Enum` pattern for backend compatibility
]

[tool.ruff.lint.isort]
known-first-party = ["workflow_models"]
